# tfjzl-final-cloud-app-with-database

./: pyproject.toml
onlinecourse/: admin.py  models.py  urls.py  views.py
onlinecourse/migrations/: 0001_initial.py  0002_choice_submission_question_choice_question.py
onlinecourse/templates/onlinecourse/: exam_result_bootstrap.html
