[tool.poetry]
name = "tfjzl-final-cloud-app-with-database"
version = "0.1.0"
description = ""
authors = ["wansu27 <ridwan.setiawan@shippit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.3"
pillow = "10.0.0"
jinja2 = "3.0"
gunicorn = "20.1.0"
contextvars = "^2.4"
typing-extensions = "4.2.0"
aiohttp = "3.8.3"
click = "8.0.4"
wheel = "0.41.1"
multidict = "4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
